# Chicago-Parks-District-Activity-Finder

./: .gitignore  Dockerfile  README.md  activities.csv  activity_parks.py  app.py  database_utils.py  parks.csv  pyproject.toml  requirements.txt  scrape.py
app/: app.py  database_utils.py  scrape.py
archive/: Parks_Downloaded.geojson  activities_api.py  activity_ids.csv  backup.py  get_all_chicago_parks_locations.py  get_searchable_parks.py  id_crosswalk.csv  park_ids.csv  parks_old.db  searchables.csv
static/: index.css  index.js  results.css  results.js
templates/: index.html  results.html
